# interconnection-impl

./: .bazeliskrc  .bazelrc  .clang-format  .gitignore  README.md  WORKSPACE
bazel/: BUILD.bazel  repositories.bzl
docker/: Dockerfile  build.sh
ic_impl/: BUILD.bazel  context.cc  context.h  factory.h  factory_lr.cc  factory_psi_v2.cc  handler.cc  handler.h  ic_main.cc  party.cc  party.h  status.cc  status.h  util.cc  util.h
ic_impl/algo/lr/: BUILD.bazel  lr_context.cc  lr_context.h  lr_handler.cc  lr_handler.h  optimizer.cc  optimizer.h
ic_impl/algo/psi/v2/: BUILD.bazel  psi_context_v2.cc  psi_context_v2.h  psi_handler_v2.cc  psi_handler_v2.h
ic_impl/data/: BUILD.bazel
ic_impl/env/: ecdh-psi-env-alice.sh  ecdh-psi-env-bob.sh  ss-lr-env-alice.sh  ss-lr-env-bob.sh
ic_impl/op/sigmoid/: BUILD.bazel  sigmoid.cc  sigmoid.h
ic_impl/protocol_family/ecc/: BUILD.bazel  ecc.cc  ecc.h
ic_impl/protocol_family/ss/: BUILD.bazel  ss.cc  ss.h
router/: README.md
router/demo/he2ss/: he_rc_03.py  he_rc_04.py  rs.py  ss_rc_01.py  ss_rc_02.py
router/demo/horizontal_lr/: he_rc_03.py  rs.py  ss_rc_01.py  ss_rc_02.py
router/demo/ss2he/: he_rc_03.py  rs.py  ss_rc_01.py  ss_rc_02.py
