# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lr_handler",
    srcs = ["lr_handler.cc"],
    hdrs = ["lr_handler.h"],
    deps = [
        ":lr_context",
        "//ic_impl:handler",
        "@spulib//libspu/mpc:factory",
        "@com_google_absl//absl/functional:bind_front",
        "@com_github_nlohmann_json//:json",
    ]
)

cc_library(
    name = "lr_context",
    srcs = ["lr_context.cc"],
    hdrs = ["lr_context.h"],
    deps = [
        ":optimizer",
        "//ic_impl:context",
        "//ic_impl/op/sigmoid",
        "//ic_impl/protocol_family/ss",
        "@spulib//libspu/kernel/hal",
    ]
)

cc_library(
    name = "optimizer",
    srcs = ["optimizer.cc"],
    hdrs = ["optimizer.h"],
    deps = [
        "//ic_impl:util",
        "//ic_impl:handshake_cc_proto",
        "@com_github_gflags_gflags//:gflags",
    ]
)
