# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "psi_handler_v2",
    srcs = ["psi_handler_v2.cc"],
    hdrs = ["psi_handler_v2.h"],
    deps = [
        ":psi_context_v2",
        "//ic_impl:handler",
    ]
)

cc_library(
    name = "psi_context_v2",
    srcs = ["psi_context_v2.cc"],
    hdrs = ["psi_context_v2.h"],
    deps = [
        "//ic_impl:context",
        "//ic_impl/protocol_family/ecc",
        "@spulib//libspu/psi:bucket_psi",
    ]
)
